# mypalantir

./: .gitignore  .gitmodules  README.md  pom.xml  pyproject.toml
app/: api.py  cli.py  orchestrator.py
docs/: claude-code-repo-context-lessons.md  domain-distiller-design.md  metamodel-spec.md  ontology-for-llm-research.md  progress.md  todo.md
domains/drone/: ontology.yaml  prompts.json
domains/drone/.distill/: discourse_analysis.yaml  doc_index.yaml  phase1_concepts.yaml  phase2_schema.yaml  phase3_links.yaml  phase3_schema.yaml  phase4_functions.yaml  phase5_functions.yaml  phase6_all_functions.yaml  state.yaml
domains/fee/: ontology.yaml
domains/hv_access/: ontology.yaml
domains/road_emergency/: prompts.json
oag/: agent.py  api.py  cli.py  executor.py  harness.py  hooks.py  orchestrator.py  planner.py  schema.py  store.py  worker.py
oag/distiller/: assemble.py  attribute.py  concept.py  discourse.py  function.py  llm.py  pipeline.py  prompts.py  relationship.py  rule.py  template_functions.py  workflow.py
oag/static/: index.html
ontology/: fee.yaml  powergrid.yaml  schema.yaml  toll.yaml
scripts/: TBL_PATH.sql  createTable.sql  init_h2_tables.sql  init_h2_tables_wide.sql  powergrid.sql
scripts/fee/: createTable_fee.sql
static/: home.html  index.html
tests/: test_domain_loads.py  test_fee.py  test_hv_access_tools.py  test_resolver_sources_example.py  test_retry_compact.py  test_tools.py
web/public/: README-MAP.md  map-test.html  sections-data.js  start-map-server.sh  toll-sections-map.html
web/src/: App.tsx
web/src/api/: client.ts
(+52 files in other folders)
