[project]
name = "mypalantir"
version = "0.1.0"
description = "Ontology Augmented Generation — 主项目组装层"
requires-python = ">=3.11"
dependencies = [
    "oag",
    "jieba>=0.42",
    "scikit-learn>=1.3",
]

[tool.uv.sources]
oag = { path = "./agent", editable = true }

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
