[project]
name = "mypalantir"
version = "0.1.0"
description = "Ontology Augmented Generation — 主项目组装层"
requires-python = ">=3.11"
dependencies = [
    "oag",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "click>=8.0",
    "python-dotenv>=1.0",
    "sse-starlette>=1.6",
    "jieba>=0.42",
    "scikit-learn>=1.3",
    "sentence-transformers>=5.5.1",
    "mineru[core]>=3.2.3",
    "transformers>=4.57.3,<5.0.0",
]

[project.scripts]
oag = "app.cli:cli"

[tool.uv.sources]
oag = { path = "./agent", editable = true }

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
